--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>THIS BLOG IS ONLY FOR COOL PEOPLE – The Best Sports Blog</title>
+<title>Truman’s NFL Sports Blog – The Best Sports Blog</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -42,7 +42,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-7b89279ff1a6dce999919e0e67d4d9ec.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-251603f34fb100524ce6c94bd8510ba7.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-1d4f84655f446305ac42a8f1abcf7405.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -177,7 +177,7 @@ window.Quarto = {
 <header id="title-block-header" class="quarto-title-block default page-columns page-full">
   <div class="quarto-title-banner page-columns page-full">
     <div class="quarto-title column-page-left">
-      <h1 class="title">THIS BLOG IS ONLY FOR COOL PEOPLE</h1>
+      <h1 class="title">Truman’s NFL Sports Blog</h1>
                       </div>
   </div>
     
@@ -209,7 +209,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bmZsJTJDZm9vdGJhbGwlMkNpbmp1cmllcw==" data-listing-date-sort="1763532000000" data-listing-file-modified-sort="1762301571899" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="28">
+<div class="quarto-post image-right" data-index="0" data-categories="bmZsJTJDZm9vdGJhbGwlMkNpbmp1cmllcw==" data-listing-date-sort="1763359200000" data-listing-file-modified-sort="1763442501222" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7" data-listing-word-count-sort="1220">
 <div class="thumbnail"><a href="./posts/nfl-team-injuries-compared-by-season/index.html" class="no-external">
 
 <img loading="lazy" src="./posts/nfl-team-injuries-compared-by-season/image.png" class="thumbnail-image">
@@ -217,7 +217,7 @@ window.Quarto = {
 </a></div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./posts/nfl-team-injuries-compared-by-season/index.html" class="no-external">Is There a New Injury Trend in the NFL?</a>
+<a href="./posts/nfl-team-injuries-compared-by-season/index.html" class="no-external">Are NFL Injuries Getting Worse?</a>
 </h3>
 <div class="listing-categories">
 
@@ -229,13 +229,13 @@ window.Quarto = {
 
 </div>
 <div class="delink listing-description"><a href="./posts/nfl-team-injuries-compared-by-season/index.html" class="no-external">
-I don’t like injuries in the NFL. I REALY don’t like it when its my team.
+The NFL has a problem, and it’s getting harder to ignore. Every Sunday, fans watch as star players limp off the field, backup quarterbacks take the helm, and fantasy…
 </a></div>
 </div>
 <div class="metadata">
 <a href="./posts/nfl-team-injuries-compared-by-season/index.html" class="no-external">
 <div class="listing-date">
-Nov 19, 2025
+Nov 17, 2025
 </div>
 <div class="listing-author">
 Truman Wood
