--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bmZsJTJDZm9vdGJhbGwlMkNpbmp1cmllcw==" data-listing-date-sort="1763359200000" data-listing-file-modified-sort="1764719164430" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="quarto-post image-right" data-index="0" data-categories="bmZsJTJDZm9vdGJhbGwlMkNpbmp1cmllcw==" data-listing-date-sort="1765260000000" data-listing-file-modified-sort="1765306543528" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="11" data-listing-word-count-sort="2005">
 <div class="thumbnail"><a href="./posts/current-season-nfl-injuries-compared/index.html" class="no-external">
 
 <img loading="lazy" src="./posts/current-season-nfl-injuries-compared/chart.png" class="thumbnail-image">
@@ -217,7 +217,7 @@ window.Quarto = {
 </a></div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./posts/current-season-nfl-injuries-compared/index.html" class="no-external">Are there more injuries in the NFL in the big 25?</a>
+<a href="./posts/current-season-nfl-injuries-compared/index.html" class="no-external">NFL Injuries On The Rise and Turf Isn’t The Bad Guy?</a>
 </h3>
 <div class="listing-categories">
 
@@ -229,13 +229,13 @@ window.Quarto = {
 
 </div>
 <div class="delink listing-description"><a href="./posts/current-season-nfl-injuries-compared/index.html" class="no-external">
-
+Every week of the 2025 NFL season brings the same grim news: more injuries, more stars sidelined, more backup quarterbacks taking snaps. Through twelve weeks, this season is…
 </a></div>
 </div>
 <div class="metadata">
 <a href="./posts/current-season-nfl-injuries-compared/index.html" class="no-external">
 <div class="listing-date">
-Nov 17, 2025
+Dec 9, 2025
 </div>
 <div class="listing-author">
 Truman Wood
